--- a/00-O1-CS1B-ASI-Dec-2022/O1-Question-3.Rmd
+++ b/00-O1-CS1B-ASI-Dec-2022/O1-Question-3.Rmd
@@ -3,11 +3,13 @@ title: "Statistics with R"
 subtitle: "Introduction to R for Actuarial Students"
 output:
   xaringan::moon_reader:
+    css: xaringan-themer.css
     lib_dir: libs
     nature:
       highlightStyle: github
       countIncrementalSlides: false
 ---
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -19,13 +21,18 @@ library(janitor)
 
 ```
 
-```{css, echo=FALSE}
-pre {
-  background: #ADD8E6;
-  max-width: 100%;
-  overflow-x: scroll;
-}
+```{r xaringan-themer, include=FALSE, warning=FALSE}
+library(xaringanthemer)
+style_mono_accent_inverse(
+  #base_color = "#3C989E")(
+  base_color = "#1c5253",
+  header_font_google = google_font("Josefin Sans"),
+  text_font_google   = google_font("Montserrat", "300", "300i"),
+  code_font_google   = google_font("Fira Mono")
+)
 ```
+
+
 
 * Introduction to R for Actuarial Students
 
@@ -53,9 +60,9 @@ distribution.
 
 ### Exercises
 
-A.  Load the “PA_Data” datset and fit the Poisson Generalised Linear Model (GLM) to 
+A.  Load the “<tt>PA_Data</tt>” datset and fit the Poisson Generalised Linear Model (GLM) to 
 the dataset, specified by the following parameter of R code for GLM: 
-Claim ~ Gender*Health + Age
+<tt>Claim ~ Gender*Health + Age</tt>
  Include summary of the fitted model and label the model as Model1. 
 
 B.  Write down the linear predictor for the model given in part (i) (i.e. Model1). Explain 
@@ -71,8 +78,8 @@ i)
 ii)
 #i.
 ```{r}
-PA<-read.csv("PA_Data.csv")
-model1<-glm(Claim~Gender*Health+Age,family=poisson(lin="log"),data=PA)
+PA <- read.csv("PA_Data.csv")
+model1 <- glm(Claim~Gender*Health+Age,family=poisson(lin="log"),data=PA)
 ```
 
 ---
@@ -81,34 +88,12 @@ model1<-glm(Claim~Gender*Health+Age,family=poisson(lin="log"),data=PA)
 ```{r}
 summary(model1)
 ```
-
-Call:
-glm(formula = Claim ~ Gender * Health + Age, family = poisson(lin = "log"), 
- data = PA)
-Deviance Residuals: 
- Min 1Q Median 3Q Max 
--1.40121 -0.78101 0.03472 0.42900 1.37735 
-Coefficients:
- Estimate Std. Error z value Pr(>|z|) 
-(Intercept) 0.17452 0.95762 0.182 0.8554 
-GenderM 0.06235 0.46853 0.133 0.8941 
-HealthNonDiabetic -1.31680 0.64556 -2.040 0.0414 *
-Age 0.02248 0.02052 1.095 0.2734 
-GenderM:HealthNonDiabetic -0.10401 0.82008 -0.127 0.8991 
----
-Signif. codes: 0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
-(Dispersion parameter for poisson family taken to be 1)
- Null deviance: 30.147 on 19 degrees of freedom
-Residual deviance: 13.179 on 15 degrees of freedom
-AIC: 62.146
-Number of Fisher Scoring iterations: 5
-
-
 --- 
 
 * linear predictor for Model 1 is
 *  a+b1X1+b2X2+b3X3+b4X1X2 where 
-Alt: 0.17452 + .06235X1 -1.31680X2 + .02248X3 -.10401X1X2
+
+$$ Alt: 0.17452 + 0.06235\;X1 -1.31680\;X2 + 0.02248\;X3 -0.10401\;X1X2$$
 * X1 = 0 for Female Gender and 1 for Male Gender
 * X2 = 0 for Diabetic and 1 for Non Diabetic
 * X3 is Age
@@ -116,22 +101,19 @@ Alt: 0.17452 + .06235X1 -1.31680X2 + .02248X3 -.10401X1X2
 
 ---
 
+### Exercise 3
 
 
----
-
-### Part (C)
-
-#iii.
 
 * Gender is not significant
-*  Health Condition is significant
+* Health Condition is significant
 * Age is not significant
-*  Interaction term between Gender and Health condition is not significant
+* Interaction term between Gender and Health condition is not significant
 
-#Scaled deviance = 13.179
-#AIC = - 2LogL(Model) + 2*Parameters
-#LogL(Model) = Parameters - AIC/2 
+* Scaled deviance = 13.179
+* AIC = - 2LogL(Model) + 2*Parameters
+
+$$LogL(Model) = Parameters - AIC/2 $$
 
 
 ---
@@ -139,13 +121,13 @@ Alt: 0.17452 + .06235X1 -1.31680X2 + .02248X3 -.10401X1X2
 ```{r}
 L<- 4- model1$aic/2
 L
-# [1] -27.07302
+
 ```
 Log Likelihood of Model1 is -27.07302
 
 ---
 
-### Part (C)
+### Exercise 3
 
 ```{r}
 model2<-glm(Claim~Health+Age,family=poisson(lin="log"),data=PA)
@@ -157,78 +139,69 @@ model2$aic < model1$aic
 
 ---
 
-#v.
+### Exercise 5
 
 ```{r}
 summary(model2)
 ```
 
-Call:
-glm(formula = Claim ~ Health + Age, family = poisson(lin = "log"), 
- data = PA)
-Deviance Residuals: 
- Min 1Q Median 3Q Max 
--1.38527 -0.76449 0.06081 0.36914 1.40103 
-Coefficients:
- Estimate Std. Error z value Pr(>|z|) 
-(Intercept) 0.21958 0.87208 0.252 0.801208 
-HealthNonDiabetic -1.38710 0.39059 -3.551 0.000383 ***
-Age 0.02252 0.02037 1.106 0.268841 
+
+
+* Age is not significant and thus can be dropped to improve the model
+* Give full marks in case reached to same conclusion using alternate methods.
+
 ---
-Signif. codes: 0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
-(Dispersion parameter for poisson family taken to be 1)
- Null deviance: 30.147 on 19 degrees of freedom
-Residual deviance: 13.201 on 17 degrees of freedom
-AIC: 58.168
-Number of Fisher Scoring iterations: 5
 
-Age is not significant and thus can be dropped to improve the model
-Give full marks in case reached to same conclusion using alternate methods.
-(0.5)
+### Exercise 4
 
+Fit another model (labelled as <tt>Model2</tt>) specified by following R code:
 
+<tt> Claim~Health+Age</tt>
 
+Demonstrate that <tt>Model2</tt> outperforms the model defined in **exercise 1**.
+ 
+---
+
+### Exercise 5
+
+* Examine the significance of <tt>Model2</tt> and fit an improved model. 
+
+* Label this model as <tt>Model3</tt>. Also justify why <tt>Model3</tt> is an improvement. 
 
 ---
 
 
-iv) Fit another model (labelled as Model2) specified by following R code:
- Claim~Health+Age
- Demonstrate that Model2 outperforms the model defined in part (i).
-v) Examine the significance of Model2 and fit an improved model. Label this model as 
-Model3. Also justify why Model3 is an improvement. 
+### Exercise 6
 
----
+* Compute the price for the product for below customers using Model2.
+* Note that Price is equal to expected aggregate claim amount per customer. 
+* <i>(In other 
+words, **expected claim amount x expected number of claims**) </i>
 
-vi) Compute the price for the product for below customers using Model2.
-Note that Price is equal to expected aggregate claim amount per customer. (In other 
-words, expected claim amount * expected number of claims) 
-Customer Age Health Gender
-Student1 30 Diabetic Male
-Actuary2 50 Non-Diabetic Female
-Which customer price will be higher under the models. Provide the reason for the same. 
+|Customer |Age| Health |Gender|
+|:----------:|:--------:|:-----:|:--------:|
+|Student1 |30 |Diabetic |Male|
+|Actuary2| 50 |Non-Diabetic |Female|
+
+* Which customer price will be higher under the models.
+* Provide the reason for the same. 
 
 ---
 
 
 ### Exercises
 
-Company is planning modification to the product to make it affordable and attractive. Under 
+Company is planning modification to the product to make it affordable and attractive. 
+
+Under 
 this modification, INR 6000 will be paid for 1st claim and then INR 4000 for 2nd claim 
 onwards. 
+
+<i>
 Hint: Under this product, essentially INR 4000 amount is paid for each claim plus additional 
 INR 2000 amount if there are claim(s). 
+</i>
 
----
-
-vii)
-a) Compute the price under this modification for Student1 and Actuary2 (as per details 
-given in part (vi) for Model3.
-b) Compare and explain why price for Student1 is lower for modified product whereas 
-for Actuary2 is higher.
-
-
----
 
 
 --- 
@@ -241,6 +214,9 @@ model3<-glm(Claim~Health,family=poisson(lin="log"),data=PA)
 
 summary(model3)
 ```
+
+---
+
 Call:
 glm(formula = Claim ~ Health, family = poisson(lin = "log"), 
  data = PA)
@@ -258,10 +234,16 @@ Signif. codes: 0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 
 Residual deviance: 14.436 on 18 degrees of freedom
 AIC: 57.403
 Number of Fisher Scoring iterations: 5
-model3$aic < model2$aic
-[1] TRUE
 
-# Under Model 3. AIC reduced from 58.17 to 57.40
+---
+
+
+```{r}
+model3$aic < model2$aic
+```
+
+
+* Under Model 3. AIC reduced from 58.17 to 57.40
 
 
 ---
@@ -285,13 +267,17 @@ Actuary2<- data.frame(Gender ="F",Health ="NonDiabetic",Age=50)
 5000*predict.glm(model3,newdata = Student1,type= "response")
  1 
 15625 
-# Price of Actuary2 is 4797.457 for Model 2 and 3750 for Model 3 
+
+
+*  Price of Actuary2 is 4797.457 for Model 2 and 3750 for Model 3 
+
+```{r}
 5000*predict.glm(model2,newdata = Actuary2,type= "response")
- 1 
-4797.457 
+```
+
+```{r}
 5000*predict.glm(model3,newdata = Actuary2,type= "response")
- 1 
-3750 
+```
 
 
 
@@ -300,6 +286,18 @@ Actuary2<- data.frame(Gender ="F",Health ="NonDiabetic",Age=50)
 
 * Under both models, Student1 price is coming higher.
 * Since student is diabetic. Under both models, health condition is significant and for non-diabetic, parameter value is negative implying lower claims for non-diabetic
+
+---
+
+
+
+### Exercise 7
+vii)
+a) Compute the price under this modification for Student1 and Actuary2 (as per details 
+given in **exercise 6** for Model3.
+b) Compare and explain why price for Student1 is lower for modified product whereas 
+for Actuary2 is higher.
+
 
 ---
 
@@ -316,19 +314,23 @@ Actuary2_mean=predict.glm(model3,newdata = Actuary2,type= "response")
 
 ```
 
+
+```{r}
 #price of Student1:
 
 #compute probability of 0 
 sp0<-dpois(0,Student1_mean)
 
 4000*Student1_mean + 2000*(1-sp0)
- 1 
+```
 14412.13 
 
+```{r}
 #price for Actuary2
 ap0<-dpois(0,Actuary2_mean)
 4000*Actuary2_mean + 2000*(1-ap0)
- 1 
+```
+
 4055.267 
 
 ---
@@ -337,9 +339,9 @@ ap0<-dpois(0,Actuary2_mean)
 Student1_mean
  1 
 3.125 
-#For student1, expected claims are 3.125. Since, more claims are expected
-# for Student1, reduction of payment lead to more saving than 
-# extra payment for 1st claim and thus, less price
+
+* For student1, expected claims are 3.125. 
+* Since, more claims are expected for Student1, reduction of payment lead to more saving than extra payment for 1st claim and thus, less price
 
 
 ---
@@ -347,7 +349,11 @@ Student1_mean
 Actuary2_mean
  1 
 0.75 
-#Whereas for Actuary2, expected claims are 0.75 close to 1.
-#thus, more payment expected for Actuary2 resulting in higher price.
 
+* Whereas for Actuary2, expected claims are 0.75 close to 1.
+* thus, more payment expected for Actuary2 resulting in higher price.
+
+---
+
+BLANK
 ---
