--- a/00-S1-CS1B-ASI-Nov-2023/S1-Question-3.Rmd
+++ b/00-S1-CS1B-ASI-Nov-2023/S1-Question-3.Rmd
@@ -3,11 +3,13 @@ title: "Statistics with R"
 subtitle: "Introduction to R for Actuarial Students"
 output:
   xaringan::moon_reader:
+    css: xaringan-themer.css
     lib_dir: libs
     nature:
       highlightStyle: github
       countIncrementalSlides: false
 ---
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -19,12 +21,15 @@ library(janitor)
 
 ```
 
-```{css, echo=FALSE}
-pre {
-  background: #ADD8E6;
-  max-width: 100%;
-  overflow-x: scroll;
-}
+```{r xaringan-themer, include=FALSE, warning=FALSE}
+library(xaringanthemer)
+style_mono_accent_inverse(
+  #base_color = "#3C989E")(
+  base_color = "#1c5253",
+  header_font_google = google_font("Josefin Sans"),
+  text_font_google   = google_font("Montserrat", "300", "300i"),
+  code_font_google   = google_font("Fira Mono")
+)
 ```
 
 * Introduction to R for Actuarial Students
@@ -97,14 +102,6 @@ Make sure to define the explanatory (categorical) variables.
 (4)
 iv) Output 2 doesn’t have an intercept as a coefficient unlike output1. Please provide the reason for the same by comparing glm R formulas.
 (2)
-v) Compare output 1 and output 2, and suggest which model is better using suitable statistics.
-(2)
-vi) Compute log likelihood of the model given in output 2.
-(3)
-vii) Claim follows Poisson distribution. Test for the parameter to be equal to 1.5 at 1% level of significance.
-Hint: Use outputs and various sub-parts to determine x for poisson test.
-(5)
-[20]
 
 
 Solution 3:
@@ -123,11 +120,10 @@ Claim.mean
 
 [1] 1.7
 
+
 ---
 
-### Part C
-
-iii)
+### Exercise 3
 
 ```{r eval=FALSE}
 log(y) = 1.1394 * GenderF + 1.1394 * GenderM -1.4271 *HealthNonDiabetic
@@ -139,9 +135,9 @@ HealthNonDiabetic =1 if Health= NonDiabetic else 0
 
 --- 
 
-### Part D
+---
 
-iv)
+### Exercise 4
 
 * For model 2, “-1” is used in Glm R formula to not take the intercepts while fitting the model.
 * Thus, no intercept exits.
@@ -150,28 +146,53 @@ iv)
 ---
 
 
+v) Compare output 1 and output 2, and suggest which model is better using suitable statistics.
+(2)
+
+---
+
+### Exercise 5
+
 v)
 AIC (=59.4) of model 2 which is lower than AIC (71.1) of model 1. This indicates that model 2 is better.
 
 ---
 
-### Part F
-vi)
+### Exercise 6
+
+Compute log likelihood of the model given in output 2.
+
+
+```{r}
 #AIC = - 2LogL(Model) + 2*Parameters
 #LogL(Model) = Parameters - AIC/2
 aic<-59.403
 par<-3
->
+```
+
+```{r}
 L<- par - aic/2
 L
-[1] -26.7015
+```
 
 --- 
 
-vii)
+### Exercise 7
+
+vii) Claim follows Poisson distribution. Test for the parameter to be equal to 1.5 at 1% level of significance.
+Hint: Use outputs and various sub-parts to determine x for poisson test.
+(5)
+[20]
+
+
+```{r}
 #Total claims = Mean claims * Total policies
+
 x<-Claim.mean*20
+
 poisson.test(x=X,T=20,r=1.5,conf.level = 0.99)
+```
+
 Exact Poisson test
 
 data: X time base: 20
