--- a/00-S1-CS1B-ASI-Nov-2023/S1-Question-4.Rmd
+++ b/00-S1-CS1B-ASI-Nov-2023/S1-Question-4.Rmd
@@ -3,11 +3,13 @@ title: "Statistics with R"
 subtitle: "Introduction to R for Actuarial Students"
 output:
   xaringan::moon_reader:
+    css: xaringan-themer.css
     lib_dir: libs
     nature:
       highlightStyle: github
       countIncrementalSlides: false
 ---
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -19,12 +21,15 @@ library(janitor)
 
 ```
 
-```{css, echo=FALSE}
-pre {
-  background: #ADD8E6;
-  max-width: 100%;
-  overflow-x: scroll;
-}
+```{r xaringan-themer, include=FALSE, warning=FALSE}
+library(xaringanthemer)
+style_mono_accent_inverse(
+  #base_color = "#3C989E")(
+  base_color = "#1c5253",
+  header_font_google = google_font("Josefin Sans"),
+  text_font_google   = google_font("Montserrat", "300", "300i"),
+  code_font_google   = google_font("Fira Mono")
+)
 ```
 
 * Introduction to R for Actuarial Students
@@ -105,6 +110,35 @@ Carry out goodness of fit test for the binomial model specified for number of ca
 (5)
 
 ---
+
+
+Empirical Bayes Credibility Theory (EBCT) Model 1
+
+The Empirical Bayes Credibility Theory (EBCT) Model 1, formulated by Hans Bühlmann in 1967, is a foundational model in actuarial science. It is used to estimate the credibility premium, which is a weighted average of the individual risk's past experience and the overall average experience of a group of similar risks³.
+
+### Key Features of EBCT Model 1:
+1. **Assumptions**:
+   - The model assumes that the observed data for each risk follows a certain distribution.
+   - The parameters of this distribution are considered random variables with their own prior distribution.
+
+2. **Credibility Factor (Z)**:
+   - The credibility factor \( Z \) determines the weight given to the individual risk's past experience versus the overall average.
+   - It ranges between 0 and 1, where a higher \( Z \) indicates more reliance on the individual risk's data.
+
+3. **Calculation**:
+   - The credibility premium is calculated as:
+     $$
+     \text{Credibility Premium} = Z \cdot \text{Individual Risk's Mean} + (1 - Z) \cdot \text{Overall Mean}
+     $$
+   - This formula balances the specific risk's historical data with the collective experience of the group.
+
+4. **Applications**:
+   - EBCT Model 1 is widely used in insurance to set premiums based on past claims data.
+   - It helps in making more accurate predictions by incorporating both individual and collective risk information.
+
+Would you like to know more about how this model is applied in practice or any specific examples?
+
+
 
 [20 Marks]
 Solution 4:
@@ -197,3 +231,11 @@ chisq.test(x=obs.comb,p=exp)
 * Since p-value <0.5, we have sufficient evidence to reject the null hypothesis that cancellation follows bin(3,0.2)
 
 ---
+
+Source: Conversation with Copilot, 5/10/2024
+(1) MTH5131 Actuarial Statistics - Queen Mary University of London. https://qmplus.qmul.ac.uk/mod/resource/view.php?id=2522684.
+(2) Risk Modelling in General Insurance - Cambridge University Press .... https://assets.cambridge.org/97805218/63940/index/9780521863940_index.pdf.
+(3) 5 Credibility Theory - Lecture notes 1 - 5 Theory (Unit 6) 5 ... - Studocu. https://www.studocu.com/in/document/universal-business-school/statistics/5-credibility-theory-lecture-notes-1/16670923.
+(4) Credibility Premium Estimation of Insurance Claims in Nigeria - IDEAS/RePEc. https://ideas.repec.org/p/hal/wpaper/hal-01855972.html.
+
+
